<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragment.ProfileFragment"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtProfileFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_centerHorizontal="true"
            android:padding="10dp"/>

        <ImageView
            android:id="@+id/imgProfilePic"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/profile_pic" />


        <TextView
            android:id="@+id/txtProfileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAlignment="center"
            android:layout_below="@+id/imgProfilePic"
            android:textSize="25dp"
            android:textColor="#000000"
            android:textStyle="italic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>


        <TextView
            android:id="@+id/txtProfileQualifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/b_tech_cse"
            android:textColor="#616161"
            android:textSize="20dp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/bio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:justificationMode="inter_word"
            android:layout_marginBottom="10dp"
            android:text="@string/bioInfo"
            android:textColor="#37474f"
            android:textSize="20dp"
            android:textStyle="normal" />

        //second person
        <ImageView
            android:id="@+id/imgProfilePic2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/profile4" />


        <TextView
            android:id="@+id/txtProfileName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sajad Bashir"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textColor="#000000"
            android:textStyle="italic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>


        <TextView
            android:id="@+id/txtProfileQualifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/b_tech_cse"
            android:textColor="#616161"
            android:textSize="20dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/bio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/bioInfo2"
            android:textColor="#37474f"
            android:textSize="20dp"
            android:textStyle="normal" />
        //third person

        <ImageView
            android:id="@+id/imgProfilePic3"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/profile2" />


        <TextView
            android:id="@+id/txtProfileName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ataur Rahman"
            android:textAlignment="center"
            android:layout_below="@+id/imgProfilePic"
            android:textSize="25dp"
            android:textColor="#000000"
            android:textStyle="italic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>


        <TextView
            android:id="@+id/txtProfileQualifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/b_tech_cse"
            android:textColor="#616161"
            android:textSize="20dp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/bio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/bioInfo3"
            android:textColor="#37474f"
            android:textSize="20dp"
            android:textStyle="normal" />
        //fourth person
        <ImageView
            android:id="@+id/imgProfilePic4"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:rotation="90"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/profile3" />


        <TextView
            android:id="@+id/txtProfileName4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Wasim Khan"
            android:paddingTop="15dp"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textColor="#000000"
            android:textStyle="italic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>


        <TextView
            android:id="@+id/txtProfileQualifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/b_tech_cse"
            android:textColor="#616161"
            android:textSize="20dp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/bio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="300dp"
            android:text="@string/bioInfo4"
            android:textColor="#37474f"
            android:textSize="20dp"
            android:textStyle="normal" />



    </LinearLayout>






</ScrollView>
